// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Title /> > should render 1`] = `
<div
  class="title-container"
  data-astro-cid-bm76wmln=""
  style="--colorsWhite: rgb(255, 255, 255);--contentPadding: 0.5rem;--sizes05: 0.5rem;--sizes1: 1rem;--sizes5: 5rem;--sizes375: 37.5rem;"
>
   
  <h1
    data-astro-cid-nt7ly25y=""
    style="--h1FontFamily: "Big Shoulders Display", Trebuchet MS;--h1FontSize: 3rem;--h1FontWeight: 900;--h1LineHeight: 1.2;"
  >
    Test Title
  </h1>
   
  <aside
    aria-label="Kirjoituksen Test Title meta-tiedot"
    data-astro-cid-lt3s3dwh=""
  >
     
    <time
      data-astro-cid-lt3s3dwh=""
      datetime="2026-01-01"
      style="font-size:1.875rem;line-height:1.5;font-family:"IBM Plex Sans", Trebuchet MS;font-weight:300"
    >
      01.01.2026
    </time>
       
    <ul
      class="chips"
      data-astro-cid-mh6aqaxn=""
      style="--chipFontFamily: "Big Shoulders Display", "Haettenschweiler", "Arial Narrow", sans-serif;--chipFontWeight: 700;--colorsDeepForest: rgb(22, 62, 53);--colorsLightSand: #E9E4D4;--colorsSand: rgb(214, 210, 196);--colorsWhite: rgb(255, 255, 255);"
    >
       
      <li
        data-astro-cid-mh6aqaxn=""
        style="--chipFontFamily: "Big Shoulders Display", "Haettenschweiler", "Arial Narrow", sans-serif;--chipFontWeight: 700;--colorsDeepForest: rgb(22, 62, 53);--colorsLightSand: #E9E4D4;--colorsSand: rgb(214, 210, 196);--colorsWhite: rgb(255, 255, 255);"
      >
         
        <a
          data-astro-cid-mh6aqaxn=""
          href="/fi/category/artificial-intelligence/"
          style="--chipFontFamily: "Big Shoulders Display", "Haettenschweiler", "Arial Narrow", sans-serif;--chipFontWeight: 700;--colorsDeepForest: rgb(22, 62, 53);--colorsLightSand: #E9E4D4;--colorsSand: rgb(214, 210, 196);--colorsWhite: rgb(255, 255, 255);"
        >
           Tekoäly 
        </a>
         
      </li>
       
    </ul>
     
  </aside>
   
</div>
`;

exports[`<Title /> > should render minimal 1`] = `
<div
  class="title-container"
  data-astro-cid-bm76wmln=""
  style="--colorsWhite: rgb(255, 255, 255);--contentPadding: 0.5rem;--sizes05: 0.5rem;--sizes1: 1rem;--sizes5: 5rem;--sizes375: 37.5rem;"
>
   
  <h1
    data-astro-cid-nt7ly25y=""
    style="--h1FontFamily: "Big Shoulders Display", Trebuchet MS;--h1FontSize: 3rem;--h1FontWeight: 900;--h1LineHeight: 1.2;"
  >
    Test Title
  </h1>
    
</div>
`;
